<resources>
    <string name="appName">BloodMe</string>
    <string name="app_name">Blood_Donation</string>
    <string name="title_text">Exit Application</string>
    <string name="account_dialog_title">Confirm SignOut</string>
    <string name="message_text">Are you sure you want to exit ?</string>
    <string name="account_dialog_messege">Sign out</string>
    <string name="nav_home">Home</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_bloodDonor">Add Donor</string>

    <string name="api_key">AIzaSyDpOrrx-0BUoixCzX2Z9UnoTz_UtuFt3Pg</string>

    <string name="option1">Search</string>
    <string name="option2">Post a Request</string>
    <string name="option3">Add Donor</string>
    <string name="option4">View Request</string>
    <string name="option5">Blood Bank</string>
    <string name="option6">Fact</string>

    <string name="q1">কয়দিন পরপর রক্ত দেয়া যায় ?</string>
    <string name="q2">রক্ত দেয়ার পরপর কি ধরনের খাবার খাওয়া উচিৎ ?</string>
    <string name="q3">রক্তদাতা যদি ড্রাগ অ্যাডিকটেড হয় তার থেকে রক্ত নেয়া উচিৎ কি না ?</string>
    <string name="q4">ধূমপায়ী রক্তদাতা থেকে রক্ত নেয়া যাবে কি না ?</string>
    <string name="q5">ব্লাড ব্যাংক থেকে রক্ত নেয়া উচিৎ কিনা ?</string>
    <string name="q6">রক্তদাতার বয়স সর্বনিম্ন বা সর্বোচ্চ কত হলে রক্ত দিতে পারবে ?</string>
    <string name="q7">রক্তদাতার ওজন সর্বনিম্ন কত হলে রক্তদানে কোন সমস্যা হবে না ?</string>
    <string name="q8">রক্তদাতা নির্দিষ্ট সময়ের মধ্যে একাধিকবার রক্ত প্রদান করলে রক্তদাতার কি কি ধরনের সমস্যা হতে পারে ?</string>
    <string name="q9">এক ব্লাডগ্রুপধারী ব্যক্তির দেহে অন্য গ্রুপধারী ব্যক্তির রক্ত প্রবেশ করালে কি ধরনের সমস্যা হতে পারে ?</string>
    <string name="q10">রক্তদানের পর রক্তদাতা অসুস্থ হয়ে পড়লে কি কি করা উচিৎ ?</string>

    <string name="a1">- ১২০ দিন</string>
    <string name="a2">- তরল খাবার(পানি,জুস ইত্যাদি )</string>
    <string name="a3">- না</string>
    <string name="a4">- যাবে তবে স্ক্রিনিং টেস্ট করে নিতে হবে</string>
    <string name="a5">- না নেয়ায় ভাল । কোথাও না পেলে নিতে পারেন তবে স্ক্রিনিং করে নিতে হবে</string>
    <string name="a6">- ১৮ থেকে ৫০ বছর</string>
    <string name="a7">- ৫০ কেজি</string>
    <string name="a8">- মাথা ঘুরানো, দুর্বলতা, এনেমিয়া</string>
    <string name="a9">- হেমোলাইসিস এবং ডেথ</string>
    <string name="a10">- বিশ্রাম,খাওয়া দাওয়া</string>


    <string-array name="blood_option">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
