<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:gravity="center"
    android:background="#441e07ed"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="5dp"
            android:padding="5dp">

        </ViewFlipper>

    </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="10dp"
                android:id="@+id/searchId"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/mainApp"
                    android:gravity="center">
                    <ImageView
                        android:background="@drawable/circle_background_blue"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_search_name"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/materialDeepPurple"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option1"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceLarge"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="10dp"
                android:id="@+id/postRequestId"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/mainApp"
                    android:gravity="center">
                    <ImageView
                        android:background="@drawable/circle_background_pink"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_post_name"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/materialPink"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option2"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceLarge"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


        2nd

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:gravity="center"
            >

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="10dp"
                android:id="@+id/addDonorId"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/mainApp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:background="@drawable/circle_background_purple"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_person_name"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/materialDeepPurple"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option3"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceLarge"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="10dp"
                android:id="@+id/viewRequestId"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/mainApp"
                    android:gravity="center">
                    <ImageView
                        android:background="@drawable/circle_background_green"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_notification_name"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/materialGreen"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option4"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceLarge"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        3rd

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="10dp"
                android:id="@+id/bloodBankId"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#711410"
                    android:gravity="center">
                    <ImageView
                        android:background="@drawable/circle_background_red"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_hospital_name"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/materialRed"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option5"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceLarge"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="10dp"
                android:id="@+id/factId"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#711410"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:background="@drawable/circle_background_yellow"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_fact_name"
                        android:padding="10dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/materialYellow"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/option6"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceLarge"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>


